pthread_barrier: Rewrite critical section.

The previous implementation was prone to deadlocks when the next round
of threads tried to enter the barrier before the prior round exited it.
This new version takes care of that problem, and also removes some
other contention.

Basic design:

 * waiter_count is now atomic, which means only the "serial" thread, or
   in case of contention threads that raced, need acquire the mutex.

 * mutex remains locked during threads wakeup, at which point waiter_count
   is negative. It is only unlocked when count reaches 0 in the last-woken
   thread. This protects against the races that lead to deadlocks.

 * Remove usage of _kern_mutex_switch_lock. This was done incorrectly;
   if it returned EINTR, the first lock would be unlocked but the second
   would not be acquired, creating further races. Instead, we leave
   the barrier lock in "LOCKED" state at all times except when we
   actually want to wake threads up, when it is left "Unlocked"
   (and "unlocked" by each successive exiting thread, just in case.)

Fixes #15736.